--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/hugo-bearblog"]
 	path = themes/hugo-bearblog
 	url = https://github.com/janraasch/hugo-bearblog.git
+[submodule "s1999u2.github.io"]
+	path = s1999u2.github.io
+	url = git@github.com:S1999U2/s1999u2.github.io.git
+[submodule "public"]
+	path = public
+	url = git@github.com:S1999U2/s1999u2.github.io.git
