--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ ignoreErrors = ["error-disable-taxonomy"]
     disable = true
   [privacy.instagram]
     disable = true
-  [privacy.twitter]
+  [privacy.x]
     disable = true
   [privacy.vimeo]
     disable = true
